crates/capsec/tests/compile_fail/sealed_permission_no_external_impl.rs
/// The Permission trait is sealed — external crates cannot implement it.
/// This prevents forgery of new permission types outside capsec-core.
use capsec::prelude::*;

struct MyPerm;
impl Permission for MyPerm {}

fn main() {}
